fix: to use Paths.get() for jdk8 does not have Path.of() implemented